assets/css/jekyll-theme-chirpy.scss
---
---

@use 'main
{%- if jekyll.environment == 'production' -%}
  .bundle
{%- endif -%}
';

/* append your custom style below */
.subtitle {
  font-size: small;
  display: inline-block;
  margin: 0 0.5rem;
}

.projects > * {
  color: var(--text-color);
}

.projects li {
  border: 0;
}

.projects .card-text {
  color: var(--text-muted-color);
}

.project-links a > span {
  text-decoration: underline;
}

.project-tools span {
  padding: .3rem .5rem;
  border-radius: .75rem;
}

.project-tools span * {
  color: var(--sidebar-active-color);
}

.project-topics {
  color: var(--text-muted-color)g
}

html {
  @media (prefers-color-scheme: light) {
    &:not([data-mode]),
    &[data-mode='light'] {
      .project-tools span {
        background-color: rgb(116, 178, 243);
      }
    }

    &[data-mode='dark'] {
      .project-tools span {
        background-color: rgb(248, 138, 156);
      }
    }
  }

  @media (prefers-color-scheme: dark) {
    &:not([data-mode]),
    &[data-mode='dark'] {
      .project-tools span {
        background-color: rgb(248, 138, 156);
      }
    }

    &[data-mode='light'] {
      .project-tools span {
        background-color: rgb(116, 178, 243);
      }
    }
  }
}

